revised list of skills

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,6 @@
 favicon.ico
 custom domain
+crypto-retail
+online store that accepts crypto
+online store that accepts bitcoin
+embed <img src="http://ghchart.rshah.org/modster" alt="2016rshah's Github chart" />
