--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,19 @@ crypto-retail
 online store that accepts crypto
 online store that accepts bitcoin
 embed <img src="http://ghchart.rshah.org/modster" alt="2016rshah's Github chart" />
-
+ToDo:
+Tailwind
+Atom
+RegX
+TwitchAPI
+YouTubeAPI
+Pine Script
+Auto Hotkeys
+Less
 ![Octocat](https://github.githubassets.com/images/icons/emoji/octocat.png)
 ![E.M. Greeff's Github Contributions](https://ghchart.rshah.org/modster)
+### Frameworks
+*   NodeJS
+*   Vue
+*   Cordova
+*   Ionic
