--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@ embed <img src="http://ghchart.rshah.org/modster" alt="2016rshah's Github chart"
 ToDo:
 Tailwind
 Atom
+background
 RegX
 TwitchAPI
 YouTubeAPI
